Thu Mar 14 16:27:53 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* system.h: Remove alloca cruft.

Wed Feb 28 03:16:48 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* build_lib.com: Changed definition of symbol CC to search
	for include files in [-.VMS] so VMS config.h can be picked
	up without copying.

Tue Feb 27 21:26:34 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* build_lib.com: Added.  DCL File to build contents of [.lib]

Tue Feb 27 21:18:38 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* system.h: added an existence_error macro check for EVMSERR
	necessary for happiness under VMS

Thu Feb 22 22:30:04 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (OBJECTS): Remove @ALLOCA@
	(SOURCES): Remove alloca.c
	* alloca.c: Removed.
	* regex.c (REGEX_MALLOC): Define.

Thu Feb 15 14:00:00  Jim Kingdon  <kingdon@cyclic.com>

	* vasprintf.c: Declare abs().

Wed Feb 14 14:48:31 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vasprintf.c (int_vasprintf): Don't cast arguments to memcpy.
	* vasprintf.c, strtoul.c: Don't include ansidecl.h.  Do include
	config.h if HAVE_CONFIG_H (for const).
	* strtoul.c: Change CONST to const.

Tue Feb 13 20:04:39 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* strtoul.c: Added (needed by vasprintf.c, and missing on SunOS4).
	* Makefile.in (SOURCES): Add strtoul.c.

Mon Feb 12 10:04:46 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vasprintf.c: Added (same contents as before).
	* Makefile.in (SOURCES): Add vasprintf.c.

Thu Feb  1 14:33:17 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * Makefile.in (xlint): new rule; does nothing, as I'm not sure
        running lint is actually advisable in here, but the top-level
        Makefile thinks it can `make xlint' here.

Thu Feb  1 15:07:42 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getopt.c: Remove rcsid.

Tue Jan 30 18:20:27 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getline.c: Don't define NDEBUG.