@@ -330,6 +330,11 @@ char *calloc ();
 extern int errno;
 #endif
 
+/* SunOS4 apparently does not define this in stdlib.h.  */
+#ifndef EXIT_FAILURE
+#define EXIT_FAILURE 1
+#endif
+
 #if defined(USG) || defined(POSIX)
 char *getcwd ();
 #else
